# rtodo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: add.rs  do_todo.rs  init.rs  lib.rs  list.rs  main.rs  todo.rs  utils.rs
src/commands/: add.rs  commands.rs  do_todo.rs  list.rs  mod.rs
